--- a/index.html
+++ b/index.html
@@ -1,1 +1,130 @@
-Hello World
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<link rel="shortcut icon" type="image/x-icon" href="https://static.codepen.io/assets/favicon/favicon-8ea04875e70c4b0bb41da869e81236e54394d63638a1ef12fa558a4a835f1164.ico" />
+<link rel="mask-icon" type="" href="https://static.codepen.io/assets/favicon/logo-pin-f2d2b6d2c61838f7e76325261b7195c27224080bc099486ddd6dccb469b8e8e6.svg" color="#111" />
+<title>CodePen - Day68</title>
+<style>
+      .odd{
+  background: orange;
+  border-style:solid;
+}
+
+.even{
+  background: red;
+  border-style:solid;
+}
+
+.correct {
+   background-color: #00DD00;
+}
+    
+ .incorrect {
+   background-color: red;
+ }
+
+input[type=text] {
+  background-color: white;
+  background-image: url('https://cdn4.vectorstock.com/i/1000x1000/92/23/hashtag-icon-on-white-background-hashtag-sign-vector-14179223.jpg');
+  background-position: 10px 10px; 
+  background-repeat: no-repeat;
+  padding-left: 40px;
+}
+
+
+input{
+/*   display:none;  */
+/*   visibility:hidden; */
+}
+    </style>
+</head>
+<body translate="no">
+<h3> SAAS Incoming 9th Grader Skills Inventory </h3>
+<h4> Level 1: Pre Algebra </h4>\
+<div class="odd">
+Evaluate = 5 -3*(x-1) when x = 7 
+<input type="text" data-answer="-13">
+</div>
+<div class="even">
+Evaluate = 4x<sup>2</sup> - 5x+1 when x = -2 
+<input type="text" data-answer="27">
+</div>
+
+<div id="theQuestions">
+</div>
+When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\), and they are
+$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML'></script>
+<script id="rendered-js">
+      console.clear();
+$('input').change(checkAnswer);
+  
+function checkAnswer(e){
+  console.log(this.data());
+}
+
+function makeQ(q,a,qtex,level){
+  let question={};
+  question.q = q
+  question.a = a
+  question.qtex = qtex
+  question.level = level
+  return question;
+}
+
+let questions = [];
+questions.push(makeQ("2^3","8",qtex="\(2^3\)",1));
+questions.push(makeQ("sqrt(16)","4",qtex="(\sqrt{16}\)",1));
+questions.push(makeQ("sqrt(64)","8",qtex="(\sqrt{64}\)",1));
+
+console.log(questions)
+
+function makeTest(e){
+  for(let i = 0; i<questions.length; i++){
+    //console.log(questions[i].q,questions[i].a);
+    theQuestion = '<div type="text" class = "'
+    if (i%2 ==0 ){
+      theQuestion += "odd"
+    } else {
+      theQuestion += "even"
+    }
+    theQuestion +='">';
+    theQuestion += questions[i].qtex;
+    theQuestion += '<input data-answer ="'
+    theQuestion += questions[i].a;
+    theQuestion += '">'
+    theQuestion += '</div>'
+    console.log(theQuestion);
+    $('#theQuestions').append(theQuestion);
+  } 
+}
+
+makeTest();
+
+$("input").change(checkAnswer);
+
+
+    function checkAnswer(e) {
+        correct = $(this).data("answer");
+        response = $(this).val();
+      console.log(correct,response);
+        numInputs = $("input").length;
+
+        if (correct == response) {
+            $(this).removeClass("incorrect").addClass("correct");
+            var numCorrect = $("#numCorrect").text();
+            $("#numCorrect").text(numCorrect * 1 + 1);
+        } else {
+            $(this).removeClass("correct").addClass("incorrect");
+        }
+        console.log('checkAnswer', correct, response);
+    }
+    </script>
+<script src="https://static.codepen.io/assets/editor/live/css_reload-5619dc0905a68b2e6298901de54f73cefe4e079f65a75406858d92924b4938bf.js"></script>
+</body>
+</html>
