--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <style>
       .odd{
   background: orange;
-  border-style:solid;
+  border-style:solid
+  height:40px;
+  width:50%;
 }
 
 .even{
@@ -29,12 +31,10 @@
 
 input[type=text] {
   background-color: white;
-  background-image: url('https://cdn4.vectorstock.com/i/1000x1000/92/23/hashtag-icon-on-white-background-hashtag-sign-vector-14179223.jpg');
-  background-position: 10px 10px; 
+  background-position: 10px 10px;
   background-repeat: no-repeat;
-  padding-left: 40px;
+  padding-left: 5px;
 }
-
 
 input{
 /*   display:none;  */
@@ -46,11 +46,11 @@ input{
 <h3> SAAS Incoming 9th Grader Skills Inventory </h3>
 <h4> Level 1: Pre Algebra </h4>\
 <div class="odd">
-Evaluate = 5 -3*(x-1) when x = 7 
+Evaluate: \(5-3(x-1)\) when x = 7 
 <input type="text" data-answer="-13">
 </div>
 <div class="even">
-Evaluate = 4x<sup>2</sup> - 5x+1 when x = -2 
+Evaluate: \(4x^2 - 5x + 1\) when x = -2 
 <input type="text" data-answer="27">
 </div>
 
@@ -64,25 +64,24 @@ $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
       console.clear();
 $('input').change(checkAnswer);
   
-function checkAnswer(e){
-  console.log(this.data());
-}
+// function checkAnswer(e){
+//   console.log(this.data());
+// }
 
-function makeQ(q,a,qtex,level){
+function makeQ(q, a, level){
   let question={};
   question.q = q
   question.a = a
-  question.qtex = qtex
   question.level = level
   return question;
 }
 
 let questions = [];
-questions.push(makeQ("2^3","8",qtex="\(2^3\)",1));
-questions.push(makeQ("sqrt(16)","4",qtex="(\sqrt{16}\)",1));
-questions.push(makeQ("sqrt(64)","8",qtex="(\sqrt{64}\)",1));
-
-console.log(questions)
+questions.push(makeQ("2^3","8",1));
+questions.push(makeQ("\\dfrac{1}{2}",".5",1))
+questions.push(makeQ("\\sqrt(16)","4",1));
+questions.push(makeQ("\\sqrt(64)","8",1));
+// console.log(questions)
 
 function makeTest(e){
   for(let i = 0; i<questions.length; i++){
@@ -94,7 +93,9 @@ function makeTest(e){
       theQuestion += "even"
     }
     theQuestion +='">';
-    theQuestion += questions[i].qtex;
+    theQuestion += '\\('
+    theQuestion += questions[i].q;
+    theQuestion += '\\)'
     theQuestion += '<input data-answer ="'
     theQuestion += questions[i].a;
     theQuestion += '">'
@@ -102,6 +103,7 @@ function makeTest(e){
     console.log(theQuestion);
     $('#theQuestions').append(theQuestion);
   } 
+  MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
 }
 
 makeTest();
@@ -112,7 +114,7 @@ $("input").change(checkAnswer);
     function checkAnswer(e) {
         correct = $(this).data("answer");
         response = $(this).val();
-      console.log(correct,response);
+       // console.log(correct, response);
         numInputs = $("input").length;
 
         if (correct == response) {
@@ -122,7 +124,7 @@ $("input").change(checkAnswer);
         } else {
             $(this).removeClass("correct").addClass("incorrect");
         }
-        console.log('checkAnswer', correct, response);
+       // console.log('checkAnswer', correct, response);
     }
     </script>
 <script src="https://static.codepen.io/assets/editor/live/css_reload-5619dc0905a68b2e6298901de54f73cefe4e079f65a75406858d92924b4938bf.js"></script>
